# qode-edit

./: .gitignore  CMakeLists.txt  README.md  pyqode-LICENSE
include/: Cache.h  CodeEdit.h  Mode.h  TextDecoration.h  utils.h
include/manager/: BackendManager.h  FileManager.h  Manager.h  ModeManager.h  PanelManager.h  TextDecorationManager.h
include/mode/: Mode.h
include/panel/: FoldingPanel.h  Panel.h
include/util/: DelayJobRunner.h  TextHelper.h
resources/: qode-edit.qrc
src/: Cache.cpp  CodeEdit.cpp  Mode.cpp  TextDecoration.cpp  utils.cpp
src/manager/: BackendManager.cpp  FileManager.cpp  ModeManager.cpp  PanelManager.cpp  TextDecorationManager.cpp
src/mode/: Mode.cpp
src/panel/: Panel.cpp
src/util/: DelayJobRunner.cpp  TextHelper.cpp
